# Judgeman

./: README.md  install.bat
Judgeman.WIP(4.29.26)/judgeman/: install.sh  jm-gui  jm-gui.py  pyproject.toml
Judgeman.WIP(4.29.26)/judgeman/judgeman/: audit.py  cli.py  output.py
Judgeman.WIP(4.29.26)/judgeman/judgeman/commands/: import_cmd.py  report_cmd.py  verify_cmd.py
gui/: app.py
gui/templates/: index.html
judgeman/: __init__.py  chainhash.py  db.py  install.ps1  jm  resolve.py
judgeman/commands/: claim_cmd.py  claim_unlink_cmd.py  close_cmd.py  evidence_cmd.py  export_cmd.py
judgeman/judgeman/: compat.py  confidence.py  models.py
judgeman/judgeman/commands/: claim_edit_cmd.py  source_cmd.py  source_update_cmd.py
