[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "judgeman"
version = "0.1.0"
description = "OSINT methodology engine — enforces structured analytical reasoning"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
judgeman = "judgeman.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["judgeman*"]
